sqlgg changelog
---------------

0.2.4
2013-09-16
	+ sql: more SQL
	+ `-gen none` to suppress output
	+ `-show-tables` to list tables
	* treat all input files as one stream of statements
	* do not generate code on errors
	+ ocaml: mysql traits, Fold callbacks
	* simplify build
	* allow ad-hoc substitution in generated sql (experimental)

0.2.3
2009-08-24
	+ sql: detect single-row SELECT (LIMIT 1, grouping without GROUP BY)
	+ ocaml: more robust traits
	+ sqlgg: noparse attribute
	+ sql: ORDER BY, explicit VALUES, CREATE LIKE, INSERT INTO ... SELECT,
			multi-table UPDATE, CASE, CREATE INDEX
	+ csharp: IEnumerable<>

0.2.2
2009-06-28
	+ generate C#
	+ parse table constraints
	+ reuse prepared statements
	+ substitute params syntax in queries to match target
	+ parse more SQL (mysql quirks, ALTER, DROP TABLE, INSERT SET)
	+ better infer types for UPDATE SET

0.2.1
2009-06-02
	+ generate XML and Java
	+ c++ traits for mysql
	+ parse more SQL

0.2.0
2009-05-17
	+ understands all basic SQL
	+ generate OCaml and C++

0.1.0
2009-05-05
	+ cleaned up old code